--- a/docs/style.css
+++ b/docs/style.css
@@ -1,27 +1,27 @@
 li:jkg{
 
     
-    background-color: rgb(152, 202, 16);
+    background-color: rgb(210, 0, 252);
 }
 li:jkg1{
 
 
-    background-color: rgb(152, 202, 16);
+    background-color: rgb(255, 7, 243);
     
 }
 
 li{
-    color: rgb(11, 241, 203);
+    color: rgb(240, 240, 240);
     list-style: none;
-    background-color: rgb(18, 14, 240);
+    background-color: rgb(204, 137, 243);
     padding: 10px 25px;
-    border: 1px dotted rgb(11, 191, 223);
+    border: 1px dotted rgb(104, 0, 107);
     font-weight: bold;
 }
 li:hover{
-    background-color: white;
-    border: 1px dotted rgb(248, 3, 3);
-    color: white;
+    background-color: rgb(255, 0, 200);
+    border: 1px dotted rgb(55, 0, 255);
+    color: rgb(255, 146, 146);
 }
 
 
@@ -31,8 +31,8 @@ body{
 }
 h1{
     text-align: center;
-    background-color: rgb(141, 232, 248);
-    text-shadow: 1px 5px 5px rgb(129, 61, 29);
+    background-color: rgb(229, 255, 0);
+    text-shadow: 1px 5px 5px rgb(231, 2, 2);
 }
 
 .head1{
@@ -47,4 +47,9 @@ h1{
     display: flex;
      justify-content: space-around;   
    
+}
+li:jkg2{
+
+    
+    background-color: rgb(0, 217, 255);
 }
